Moved week control from rootScope to a WeekCtrl
Added week abstract state
Moved the week control from the $rootScope to the WeekCtrl

--- a/css/app.less
+++ b/css/app.less
@@ -11,4 +11,5 @@
 @import "../partial/project/project.less";
 @import "../partial/personal/details/details.less";
 @import "../partial/project/details/details.less";
+@import "../partial/week/week.less";
 /* Add Partial LESS Above */
