--- a/partial/personal/personal.html
+++ b/partial/personal/personal.html
@@ -5,7 +5,7 @@
       <ion-slide ng-repeat="yearWeek in weeks">
         <div class="box">
           <ion-list class="card">
-            <a ng-repeat="(user, summary) in yearWeek.users" class="item item-icon-left item-icon-right listed" ui-sref="personalDetails({ user:user })">
+            <a ng-repeat="(user, summary) in yearWeek.users" class="item item-icon-left item-icon-right listed" ui-sref="week.personalDetails({ user:user })">
               <badge user="user"></badge>
               <span class="listed-name">{{user.toUpperCase()}}</span>
               <span class="listed-planned">{{summary.planned}}</span>
