--- a/partial/project/project.less
+++ b/partial/project/project.less
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   flex-direction: row;
   align-content: center;
-  .project-name {
+  .name {
     flex-grow: 1;
     order: 0;
     width: 250px;
@@ -11,14 +11,14 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  .project-planned,
-  .project-reported {
+  .planned,
+  .reported {
     flex-grow: 0;
     width: 30px;
     margin: 0 20px;
     text-align: right;
   }
-  .project-planned {
+  .planned {
     font-weight: bold;
   }
 
