--- a/directive/badge/badge.less
+++ b/directive/badge/badge.less
@@ -1,11 +1,37 @@
 .user-badge.badge {
-  height: 35px;
-  width: 35px;
-  border-radius: 17.5px;
-  border: 1px solid transparent;
-  padding: 0 1px;
-  top: 10px;
-  left: 10px;
+  @size: 35px;
+
+  left: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: @size;
+
+  .circle {
+
+    min-height: @size;
+    max-height: @size;
+    min-width: @size;
+    max-width: @size;
+    border-radius: 17.5px;
+    border: 1px solid transparent;
+    display: block;
+    font-size: @size;
+    margin: 0;
+    padding: 0;
+  }
+
   i {
     margin: 0 auto;
     color: white;
