--- a/partial/project/project.html
+++ b/partial/project/project.html
@@ -1,16 +1,20 @@
 <ion-nav-bar></ion-nav-bar>
-<ion-view title="V{{activeWeek.week}}">
+<ion-view class="project" title="V{{activeWeek.week}}">
   <ion-content>
     <ion-slide-box on-slide-changed="weekSelect($index)" active-slide="activeSlider">
       <ion-slide ng-repeat="yearWeek in weeks">
         <div class="box">
           <ion-list class="card">
-            <a ng-repeat="project in yearWeek.projects | sortByDepartmentName" class="item item-icon-left item-icon-right listed" ui-sref="projectDetails({projectId: project.projectId})">
-              <i class="icon ion-briefcase"></i>
-              <span class="listed-name">{{project.name.toUpperCase()}}</span>
-              <span class="listed-planned">{{project.summary.planned}}</span>
-              <span class="listed-reported">{{project.summary.reported}}</span>
-              <i class="icon ion-ios7-arrow-forward"></i>
+            <a ng-repeat="project in yearWeek.projects | sortByDepartmentName" class="item item-icon-left item-icon-right" ui-sref="projectDetails({projectId: project.projectId})">
+              <span class="mobile-row">
+                <i class="icon ion-briefcase"></i>
+                <span class="name">{{project.name.toUpperCase()}}</span>
+              </span>
+              <span class="mobile-row align-right">
+                <strong class="ion-ios7-clock-outline"> {{project.summary.planned}}</strong>
+                <i class="ion-ios7-checkmark-outline"> {{project.summary.reported}}</i>
+                <i class="icon ion-ios7-arrow-forward"></i>
+              </span>
             </a>
           </ion-list>
         </div>
