--- a/css/app.less
+++ b/css/app.less
@@ -14,4 +14,5 @@
 @import "../partial/personal/details/details.less";
 @import "../partial/project/details/details.less";
 @import "../partial/week/week.less";
+@import "../partial/menu/menu.less";
 /* Add Partial LESS Above */
