made it visible ...

--- a/partial/menu/menu.html
+++ b/partial/menu/menu.html
@@ -1,9 +1,8 @@
-
-<ion-list>
-  <ion-item>
-    <a ui-sref="week.personal" icon="icon ion-person">Personal</a>
-  </ion-item>
-  <ion-item>
-    <a ui-sref="week.project" icon="icon ion-person">Project</a>
-  </ion-item>
+<ion-list class="card">
+  <a ui-sref="week.personal" class="item no-line item-icon-left">
+    <i icon="icon ion-person"></i> Personal</a>
+  </a>
+  <a ui-sref="week.personal" class="item no-line item-icon-left">
+    <i icon="icon ion-person"></i> Project</a>
+  </a>
 </ion-list>
