--- a/css/app.less
+++ b/css/app.less
@@ -13,4 +13,6 @@
 @import "../partial/project/project.less";
 @import "../partial/personal/details/details.less";
 @import "../partial/project/details/details.less";
+@import "../partial/menu/menu.less";
+@import "../partial/week/week.less";
 /* Add Partial LESS Above */
