--- a/partial/menu/menu.html
+++ b/partial/menu/menu.html
@@ -1,3 +1,8 @@
-<div ng-controller="MenuCtrl">
-
-</div>
+<ion-list class="card">
+  <a ui-sref="week.personal" class="item no-line item-icon-left">
+    <i icon="icon ion-person"></i> Personal</a>
+  </a>
+  <a ui-sref="week.personal" class="item no-line item-icon-left">
+    <i icon="icon ion-person"></i> Project</a>
+  </a>
+</ion-list>
