--- a/partial/project/details/details.html
+++ b/partial/project/details/details.html
@@ -10,7 +10,7 @@
 
         <div class="box">
           <ion-list class="card center">
-            <a data-ng-repeat="(user, hours) in yearWeek.filteredUsers" class="item item-icon-left item-icon-right user-summary" data-ui-sref="personalDetails({user:user})">
+            <a data-ng-repeat="(user, hours) in yearWeek.filteredUsers" class="item item-icon-left item-icon-right user-summary" data-ui-sref="week.personalDetails({user:user})">
               <span class="mobile-row">
                 <badge user="user"></badge>
                 <strong class="user">{{user.toUpperCase()}}</strong>
