Fix #23 side-menu
Added click handlers to navigate to personal/project
Needs design

--- a/partial/menu/menu.html
+++ b/partial/menu/menu.html
@@ -1,8 +1,8 @@
 <ion-list class="card">
-  <a ui-sref="week.personal" class="item no-line item-icon-left">
+  <a ng-click="goTo('week.personal')" class="item no-line item-icon-left">
     <i icon="icon ion-person"></i> Personal</a>
   </a>
-  <a ui-sref="week.personal" class="item no-line item-icon-left">
+  <a ng-click="goTo('week.project')" class="item no-line item-icon-left">
     <i icon="icon ion-person"></i> Project</a>
   </a>
 </ion-list>
